review-virtual.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
  namespace: default
spec:
  gateways:
  - bookinfo-gateway2
  hosts:
  - "reviews"
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
        host: reviews
      weight: 99

    - destination:
        host: reviews
        subset: v2
        host: reviews
      weight: 1
